css/all.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

/* Colors */
/*
Morning: 6am-12pm

Afternoon: 12pm-7pm

Evening: 7pm-10pm

Night: 10pm-6am
*/
body {
  background-color: rgb(19, 22, 23);
  color: white;
  overflow: hidden;
}

h1, .blinking-cursor {
    font-family: 'Source Code Pro', monospace;
    font-size: 3.5em;
}

a {
  font-family: 'Source Code Pro', monospace;
  text-decoration: none;
  transition: color 125ms;
}

a:visited, a:active {
  color: white;
}

a:hover {
  color: grey;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  padding-left: 40px;
  padding-bottom: 20px;
  color: #c5c5c5;
  text-align: left;
  font-family: 'Pacifico', cursive;
  /*font-family: 'Roboto', sans-serif;*/
  font-size: 1em; 
}

#title {
    padding: 40px;
    width: 100%;
}

#copyr {
 font-size: 0.7em;
} 
#copyyear {
  font-size: 0.8em;
}

/* Blinking cursor in CSS3 - By Artem Gordinsky */

.blinking-cursor {
    color: #c5c5c5;
    font-size: inherit;
    -webkit-animation: 1s blink step-end infinite;
    -moz-animation: 1s blink step-end infinite;
    -ms-animation: 1s blink step-end infinite;
    -o-animation: 1s blink step-end infinite;
    animation: 1s blink step-end infinite;
  }
  
  @keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: #c5c5c5;
    }
  }
  
  @-moz-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: #c5c5c5;
    }
  }
  
  @-webkit-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: #c5c5c5;
    }
  }
  
  @-ms-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: #c5c5c5;
    }
  }
  
  @-o-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: #c5c5c5;
    }
  }

